# vulnera-sast

./: Cargo.toml  README.md
examples/: scale_benchmark.rs  taint-config.toml
rules/: c_cpp.toml  common.toml  go.toml  javascript.toml  python.toml  rust.toml  typescript.toml
src/: lib.rs  module.rs
src/application/: mod.rs  use_cases.rs
src/domain/: call_graph.rs  entities.rs  finding.rs  mod.rs  pattern_types.rs  rule.rs  suppression.rs  taint_types.rs  value_objects.rs
src/infrastructure/: analysis_selector.rs  ast_cache.rs  call_graph.rs  call_graph_queries.rs  cfg.rs  data_flow.rs  incremental.rs  metavar_patterns.rs  mod.rs  oxc_frontend.rs  parser_frontend.rs  parsers.rs  query_engine.rs  regex_cache.rs  rules.rs  sarif.rs  sast_engine.rs  scanner.rs  semantic.rs  symbol_table.rs  taint_queries.rs
src/infrastructure/rules/: default_rules.rs  loader.rs  mod.rs  repository.rs
src/infrastructure/rules/default_rules/: c_cpp.rs  common.rs  go.rs  javascript.rs  mod.rs  python.rs  rust_rules.rs  typescript.rs
src/infrastructure/semgrep/: executor.rs  mod.rs  output.rs
taint-patterns/: c_cpp.toml  go.toml  javascript.toml  python.toml  rust.toml
tests/: datatest_sast_rules.rs  proptest_ast_parsing.rs  test_accuracy_report.rs  test_cve_fixtures.rs  test_false_positive_prevention.rs  test_interprocedural_taint.rs  test_new_damn_repo.rs  test_rule_packs.rs  test_sanitizer_effectiveness.rs  test_sarif_snapshots.rs  test_sast_integration.rs  test_sast_scanning.rs  test_semantic_rules.rs
tests/common/: accuracy.rs  fixture_runner.rs  fixture_types.rs  fixtures.rs  helpers.rs  mod.rs
tests/data/cve-fixtures/c_cpp/: buffer-overflow.yaml  cpp-command-injection.yaml  memory-command-injection.yaml
tests/data/cve-fixtures/go/: command-sql-injection.yaml  ssrf-http-requests.yaml
tests/data/cve-fixtures/javascript/: cve-2019-10744-lodash-prototype-pollution.yaml  cve-2019-10747-template-injection.yaml  eval-code-injection.yaml  sql-injection-crypto.yaml  xss-dom.yaml  zip-slip-path-traversal.yaml
tests/data/cve-fixtures/python/: command-injection.yaml  cve-2007-4559-tarfile-path-traversal.yaml  cve-2019-12308-django-sqli.yaml  deserialization.yaml  pickle-yaml-deserialization-rce.yaml
tests/data/cve-fixtures/rust/: command-injection.yaml
tests/data/cve-fixtures/typescript/: ts-injection-xss.yaml  ts-type-safety.yaml
tests/data/sast/: test_vulnerable.js  test_vulnerable.py
tests/snapshots/: test_sarif_snapshots__sarif_empty_scan.snap  test_sarif_snapshots__sarif_go_command_injection.snap  test_sarif_snapshots__sarif_javascript_xss.snap  test_sarif_snapshots__sarif_python_eval.snap.new  test_sarif_snapshots__sarif_rust_unsafe.snap
