[package]
name = "vulnera-sast"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vulnera-core = { path = "../vulnera-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# SAST dependencies
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-rust = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }

# Streaming iterator for tree-sitter queries
streaming-iterator = "0.1"

# Database
sqlx = { workspace = true }

# Caching serialization
bincode = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# UUID for entity IDs
uuid = { workspace = true }

# Time handling
chrono = { workspace = true }

# Glob patterns for file matching
globset = { workspace = true }

# Temporary files for Semgrep rules
tempfile = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
datatest-stable = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
