[package]
name = "vulnera-sast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vulnera-core = { path = "../vulnera-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Caching
moka = { workspace = true }
once_cell = { workspace = true }

# SAST dependencies
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-rust = { workspace = true }
oxc_allocator = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
git2 = { workspace = true }

# Streaming iterator for tree-sitter queries
streaming-iterator = { workspace = true }
futures = { workspace = true }


# Caching serialization
bincode = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# UUID for entity IDs
uuid = { workspace = true }


# Glob patterns for file matching
globset = { workspace = true }

# Temporary files for rule fixtures
tempfile = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
datatest-stable = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
serde_yml = { workspace = true }
insta = { version = "1.46", features = ["yaml"] }
walkdir = { workspace = true }

[[test]]
name = "datatest_sast_rules"
harness = false
