[package]
name = "vulnera-sast"
version = "0.5.1"
edition = "2024"
rust-version = "1.92"
authors = ["Vulnera-Team"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/Vulnera-rs/vulnera"
keywords = ["security", "vulnerability", "analysis", "sast"]
categories = ["web-programming", "development-tools"]

[dependencies]
vulnera-contract = { package = "vulnera-contract", git = "https://github.com/Vulnera-rs/vulnera.git" }

# Async runtime
tokio = { version = "1.51", features = ["full"] }
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
serde_yml = "0.0.12"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1.44"

# Caching
moka = { version = "0.12", features = ["future"] }
once_cell = "1.21"

# SAST dependencies
tree-sitter = "0.26.3"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-rust = "0.24.0"
oxc_allocator = "0.124.0"
oxc_parser = "0.124.0"
oxc_span = "0.124.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
walkdir = "2.5"
regex = "1.12"
git2 = "0.20.3"

# Streaming iterator for tree-sitter queries
streaming-iterator = "0.1"
futures = "0.3.31"

# Caching serialization
rkyv = { version = "0.8", features = ["alloc", "bytecheck"] }
sha2 = "0.11.0"
hex = "0.4.3"

# UUID for entity IDs
uuid = { version = "1.20.0", features = ["v4", "serde"] }

# Glob patterns for file matching
globset = "0.4"

# Temporary files for rule fixtures
tempfile = "3.25.0"

[dev-dependencies]
tokio-test = "0.4.5"
proptest = "1.9"
datatest-stable = "0.3.3"
rstest = "0.26.1"
tempfile = "3.25.0"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
serde_yml = "0.0.12"
insta = { version = "1.46", features = ["yaml"] }
walkdir = "2.5"

[[test]]
name = "datatest_sast_rules"
harness = false
